# paperazzi

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PLAN.md  README.md  RELEASING.md  TODO.md  compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
browser-extension/: README.md  background.js  manifest.base.json  onboarding.html  onboarding.js  popup.html  popup.js  popup_format.js  search_detector.js
browser-extension/background/: config.js  metadata.js  observer.js  pdf_discovery.js  pdf_fetch.js  permissions.js  search.js  utils.js
containers/translation-server/: Containerfile  apply-cookie-patch.sh
docs/: TODO.md  remediation-plan-2026-07.md  security.md
packaging/systemd/: pzi.service
src/pzi/: __init__.py  __main__.py  _record_fetching.py  add_planning.py  add_service.py  bib_preserve.py  bib_repository.py  bib_serialize.py  bib_service.py  bibtex.py  browser_pdf.py  browser_pdf_hook.py  browser_session.py  browser_session_manager.py  capture_context.py  capture_core.py  capture_local_pdf.py  capture_models.py  check_service.py  citekeys.py  clean_service.py  cli.py  cli_commands.py  cli_parser.py  cli_render.py  cli_server.py  config.py  config.template.toml  config_loader.py  config_writer.py  crossref.py  dedupe_service.py  doaj.py  doctor_service.py  errors.py  europepmc.py  export_service.py  fetch_helpers.py  fileio.py  flaresolverr.py  (+53 more)
src/pzi/commands/: __init__.py  add.py  check.py  clean.py  common.py  dedupe.py  delete.py  doctor.py  entries.py  export.py  fix.py  import_.py  inbox.py  init.py  pdf.py  promote.py  reindex.py  search.py  server.py  tags.py  update.py
tests/: browser_probe.py  conftest.py  fake_session.py  test_100pct_sweep.py  test_add_planning.py  test_add_service_edges.py  test_api_identity.py  test_batch_write.py  test_bib_locks.py  test_bib_preserve.py  test_bib_repository.py  test_bib_repository_edges.py  test_bib_service.py  test_bib_stability.py  test_bibtex.py  test_bibtex_edges.py  test_browser_extension_js.py  test_browser_integration.py  test_browser_pdf.py  test_browser_pdf_edges.py  test_browser_pdf_hook.py  test_browser_pdf_hook_edges.py  test_browser_pdf_hook_integration.py  test_browser_pdf_hook_pure.py  test_browser_session.py  test_browser_session_edges.py  test_browser_session_manager.py  test_build_extension.py  test_capture_context.py  test_capture_core.py  test_capture_identity.py  test_capture_local_pdf.py  test_capture_models.py  test_capture_write.py  test_check_service.py  test_citekeys.py  test_clean_service.py  test_cli.py  test_cli_commands_check.py  test_cli_commands_inbox.py  (+117 more)
tests/fixtures/: article_no_pdf.html  article_with_candidate_link.html  article_with_cookie_banner.html  article_with_download_button.html  article_with_pdf_link.html
tests/fixtures/paywall/: crossref_response.json  translation_response_article.json  translation_response_search.json  unpaywall_response_oa.json
tests/fixtures/ts_js/: webEndpoint.js  webSession.js
tests/live/: conftest.py  test_live_add_search.py  test_live_metadata.py
tools/: __init__.py  browser_pdf_hook.py  build_extension.py  publish_smoke.py
