[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperazzi"
version = "0.1.0b2"
description = "Capture papers into local BibTeX libraries from DOI, URL, or PDF"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["bibtex", "academic", "papers", "pdf", "zotero", "citation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["argcomplete>=3", "bibtexparser>=2.0.0b9,<3", "portalocker>=2", "pypdf>=4.0"]

[project.optional-dependencies]
# Playwright powers the optional browser-profile PDF fallback
# (config key `browser_pdf_cmd`). The base install is lighter without it;
# install with `pipx install 'paperazzi[playwright]'` to enable the fallback.
playwright = ["playwright>=1.40"]
dev = [
    "build>=1",
    "coverage[toml]>=7.6",
    "playwright>=1.40",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "twine>=5",
]

[project.urls]
Homepage = "https://github.com/mnazaal/paperazzi"
Repository = "https://github.com/mnazaal/paperazzi"

[project.scripts]
pzi = "pzi.cli:main"

[tool.setuptools.package-data]
pzi = ["config.template.toml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = ["--strict-markers", "--strict-config"]
markers = [
    "browser: tests requiring Playwright browser binaries",
]

[tool.coverage.run]
branch = true
source = ["pzi"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise SystemExit",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tools"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
